[package]
name = "filte"
version = "0.1.0"
edition = "2024"

[dependencies]

simd_util = { git = "https://github.com/AquaEBM/simd_util", default-features = false }
num = { version = "0.4", optional = true }

[features]

default = ["std_simd", "num"]
core_simd_crate = ["simd_util/core_simd_crate"]
std_simd = ["simd_util/std_simd"]